Toolbox: update theme
Change-Id: Id432dd725c7e40edc9f80f85b708f34965a015e4

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,7 +46,7 @@
 
     <application android:label="@string/toolbox_title"
             android:icon="@mipmap/ic_launcher"
-            android:theme="@style/Theme.Settings"
+            android:theme="@style/Theme.SubSettingsBase"
             android:hardwareAccelerated="true"
             android:supportsRtl="true"
             android:defaultToDeviceProtectedStorage="true"
