--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,28 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
-/**
- * Copyright 2016, The CyanogenMod Project
- * Copyright 2017-2020, The LineageOS Project
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+<?xml version="1.0" encoding="utf-8"?><!--
+     SPDX-FileCopyrightText: 2016 The CyanogenMod Project
+     SPDX-FileCopyrightText: 2017-2023 The LineageOS Project
+     SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
     package="com.evervolv.toolbox"
-    android:versionName="3.0"
-    android:versionCode="300"
-    android:sharedUserId="android.uid.system">
+    android:sharedUserId="android.uid.system"
+    android:versionCode="3"
+    android:versionName="3.0">
 
     <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -42,17 +27,19 @@
     <protected-broadcast android:name="com.evervolv.toolbox.REFRESH_PART" />
     <protected-broadcast android:name="com.evervolv.toolbox.gestures.UPDATE_SETTINGS" />
 
-    <application android:label="@string/toolbox_title"
-            android:icon="@mipmap/ic_launcher"
-            android:theme="@style/Theme.SubSettingsBase"
-            android:hardwareAccelerated="true"
-            android:supportsRtl="true"
-            android:defaultToDeviceProtectedStorage="true"
-            android:directBootAware="true">
+    <application
+        android:defaultToDeviceProtectedStorage="true"
+        android:directBootAware="true"
+        android:hardwareAccelerated="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/toolbox_title"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.SubSettingsBase">
 
-        <activity android:name=".PartsActivity"
-                android:exported="true"
-                android:configChanges="orientation|keyboardHidden|screenSize">
+        <activity
+            android:name=".PartsActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -76,26 +63,29 @@
             </intent-filter>
         </activity-alias>
 
-        <receiver android:name=".BootReceiver"
+        <receiver
+            android:name=".BootReceiver"
             android:exported="true">
             <intent-filter android:priority="2147483647">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".PartsUpdater"
+        <receiver
+            android:name=".PartsUpdater"
             android:exported="true">
             <intent-filter>
                 <action android:name="evervolv.intent.action.UPDATE_PREFERENCE" />
             </intent-filter>
         </receiver>
 
-        <provider android:name=".search.PartsSearchIndexablesProvider"
-                  android:authorities="com.evervolv.toolbox"
-                  android:multiprocess="false"
-                  android:grantUriPermissions="true"
-                  android:permission="android.permission.READ_SEARCH_INDEXABLES"
-                  android:exported="true">
+        <provider
+            android:name=".search.PartsSearchIndexablesProvider"
+            android:authorities="com.evervolv.toolbox"
+            android:exported="true"
+            android:grantUriPermissions="true"
+            android:multiprocess="false"
+            android:permission="android.permission.READ_SEARCH_INDEXABLES">
             <intent-filter>
                 <action android:name="android.content.action.SEARCH_INDEXABLES_PROVIDER" />
             </intent-filter>
